modules/envoyproxy/files/fixtures/bad/listeners.d/00-tls-termination.yaml
# SPDX-License-Identifier: Apache-2.0
address:
  socket_address:
    address: 0.0.0.0
    port_value: 443
filter_chains:
  - filters:
    - name: envoy.http_connection_manager
      config:
        codec_type: auto
        stat_prefix: ingress_http
        route_config:
          name: local_route
          virtual_hosts:
          - name: backend
            domains:
            - "example.com"
            routes:
            - match:
                prefix: "/service/1"
              route:
                cluster: service1
            - match:
                prefix: "/service/2"
              route:
                cluster: service2
        http_filters:
        - name: envoy.filters.http.router
          config: {}
    tls_context:
      common_tls_context:
        tls_certificates:
          - certificate_chain:
              filename: "/tmp/.envoyconfig/example-com.crt"
            private_key:
              filename: "/tmp/.envoyconfig/example-com.key"
