modules/envoyproxy/files/fixtures/bad/listeners.d/01-http-redirect.yaml
address:
  socket_address:
    address: 0.0.0.0
    port_value: 80
filter_chains:
- filters:
  - name: envoy.http_connection_manager
    config:
    codec_type: auto
    stat_prefix: ingress_http
    route_config:
    virtual_hosts:
    - name: backend
      domains:
      - "example.com"
      routes:
      - match:
          prefix: "/"
        redirect:
          path_redirect: "/"
          https_redirect: true
        http_filters:
        - name: envoy.filters.http.router
          config: {}this-is_garbagecd bad/
*this-is_garbagecd bad/
